--- a/src/ReallarySlider/ReallarySlider.css
+++ b/src/ReallarySlider/ReallarySlider.css
@@ -1,16 +1,38 @@
-.sliders-enter {
-  transition: all 0.5s;
-  transform: translateX(-120%);
-}
-.sliders-enter .sliders-enter-active {
-  transform: translateX(0);
-}
-
-.sliders-exit {
-  transition: all 0.5s;
-  transform: translateX(120%);
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.sliders-exit .sliders-exit-active {
-  transform: translateX(120%);
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
